@@ -1,13 +1,17 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.401 2005/10/01 16:04:49 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.402 2005/10/01 18:31:32 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
   1 Oct 2005; Andrew Gaffney <agafney@gentoo.org>
   src/net/server/gliserv.py:
   allow for param to be passed multiple times in GET
+  no XMLRPC functions return None
+  src/net/client/gliclient.py:
+  various typo and type mismatch fixes
+  exit after exception
 
   30 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/client/gliclient.py:
